--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head><title>Happy Bowl</title></head>
 <body bgcolor="lightyellow">
 <h1>Welcome to Happy Bowl</h1>
+<a href="http://whois.domaintools.com/" target="_blank">Whois</a>
+<p>
+<a href="http://domaintools.com/" target="_blank">Domain Tools</a>
+
+<p>
+<a href="https://www.youtube.com/watch?v=L7r_-FaJNV4&t=1389s" target="_blank">WordPress tutorial</a>
 </body>
 
 </html>
