--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
-<html>
-<head><title>Happy Bowl</title></head>
+<html class='v2' dir='ltr' lang='zh-TW'>
+<meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+<style>
+		body { background-color: #ccffff;}
+		h1 {color: darkblue; font-size:25px;}
+		h2 {color: black; text-align: left;font-size:15px;}
+		p {font-family: DIN Offc; font-size:15px; color:red;}
+		td { text-align: center; font-size:20px;}	
+</style>
+<head><title>快樂人生</title></head>
 <body bgcolor="lightyellow">
-<h1>Welcome to Happy Bowl</h1>
-<a href="http://whois.domaintools.com/" target="_blank">Whois</a>
+<center><img src="https://cdn.pixabay.com/blog/post/2015/05/15/14-37-19-172_640.png" widht="200" height="100">
+<h1>西雅圖戶外 會員:
+<br>你們好!
 <p>
-<a href="http://domaintools.com/" target="_blank">Domain Tools</a>
+<br>我正在學習如何自己構建一個網頁。 這是一份草案。
+</h2>
 
+<h3>
+<a href="https://www.google.com/search?q=death+valley&client=firefox-b-1&tbm=isch&tbo=u&source=univ&sa=X&ved=2ahUKEwjBjJXq_fXdAhUTFnwKHQHzA5UQsAR6BAgCEAE&biw=1920&bih=915" target="_blank">加州死亡谷國家公園圖片 </a>
+
+<a href=https://drptraveling.blogspot.com/2016/04/deathvalley.html target="_blank">加州死亡谷國家公園 blog</a>
+
+<br>
+
+<a href="https://waparks.org/" targer="_blank"> 華盛頓國家公園</a>
+<br>
+<a href="https://www.allrecipes.com/recipe/6865/to-die-for-blueberry-muffins/" target="_blank">如何製作藍莓鬆餅視頻</a>
 <p>
-<a href="https://www.youtube.com/watch?v=L7r_-FaJNV4&t=1389s" target="_blank">WordPress tutorial</a>
+<br><a href="https://www.tulalipresortcasino.com/Resort/LeisureTravelAndToursLuxeline" targer="_blank">賭場巴士預訂</a>
+<br>
+<a href="http://hk.centanet.com/findproperty/zh-HK/Home/Index" targer="_blank">中原地產</a>
 </body>
 
 </html>
