--- a/index.html
+++ b/index.html
@@ -114,12 +114,14 @@
 </head>
 
 <body bgcolor="lightyellow">
-<center><img src="https://cdn.pixabay.com/blog/post/2015/05/15/14-37-19-172_640.png" widht="200" height="100">
+<center>
+  <img src="https://cdn.pixabay.com/blog/post/2015/05/15/14-37-19-172_640.png" widht="210" height="150"/>
 <h1>西雅圖戶外 會員:
 <br>你們好!
 <p>
 <br>我正在學習如何自己構建一個網頁。 這是一份草案。
 </h2>
+</center>
 <p>
 
     <!-- Tab links -->
@@ -138,15 +140,23 @@
 	<br>
 	<a href=https://drptraveling.blogspot.com/2016/04/deathvalley.html target="_blank">加州死亡谷國家公園 blog</a>
 	<br>
-	<br>
 	<a href="https://waparks.org/" targer="_blank"> 華盛頓國家公園</a>
 	<br>
-	<br>
-	<a href="https://www.allrecipes.com/recipe/6865/to-die-for-blueberry-muffins/" target="_blank">如何製作藍莓鬆餅視頻</a>
+	<br>旅遊: <a href="https://www.e-japannavi.com/">日本</a>&nbsp | &nbsp
+	<a href="http://www.tokyo-guesthouse.com/index.html" target="_blank">民宿</a>
+	<br>健康: 
+	<a href="https://www.youtube.com/watch?v=iET9uY2luDQ" target="_blank">林芊妤 瑜珈</a>
+	&nbsp | &nbsp
+	<a href="https://www.youtube.com/watch?v=RaOrMcgCCP0"  target="_blank">玉珠鉉 瑜珈</a>
+	&nbsp | &nbsp
+	<a href="https://www.youtube.com/watch?v=yL_NODpWv5s" target="_blank">醫生與你：膝痛</a>
+	<br>音樂:
+	<a href="https://www.youtube.com/watch?v=6au-_QeL-WA" target="_blank">米高</a>
+	<br>口福: <a href="https://www.allrecipes.com/recipe/6865/to-die-for-blueberry-muffins/" target="_blank">如何製作藍莓鬆餅視頻</a>
 	<p>
 	<br>
 	<br><a href="https://www.tulalipresortcasino.com/Resort/LeisureTravelAndToursLuxeline" targer="_blank">賭場巴士預訂</a>
-	<a href="http://hk.centanet.com/findproperty/zh-HK/Home/Index" targer="_blank">中原地產</a>
+	<br><a href="http://hk.centanet.com/findproperty/zh-HK/Home/Index" targer="_blank">中原地產</a>
 </div>
 <div id="japanese" class="tabcontent">
 	<h3>
@@ -212,8 +222,9 @@
 	<br>
 	<a href="https://waparks.org/" targer="_blank"> Washington State Park</a>
 	<br>
-	<br>
-	<a href="https://www.allrecipes.com/recipe/6865/to-die-for-blueberry-muffins/" target="_blank">How to make blueberry muffins</a>
+	<br><a href="https://www.youtube.com/watch?v=x_WJ5cotyfE" target="_blank">yoga </a> &nbsp | &nbsp
+	<a href="https://www.youtube.com/watch?v=ci32v-YsUgA" target="_blank">dance</a>
+	<br><a href="https://www.allrecipes.com/recipe/6865/to-die-for-blueberry-muffins/" target="_blank">How to make blueberry muffins</a>
 	<p>
 	<br>
 	<br><a href="https://www.tulalipresortcasino.com/Resort/LeisureTravelAndToursLuxeline" targer="_blank">Tulalip Bus Reservation</a>
