--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 
 <body bgcolor="lightyellow">
   <center>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/_gaJxJCr1ec?&loop=1;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/6au-_QeL-WA?start=4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+  <iframe width="200" height="100" src="https://www.youtube.com/embed/_gaJxJCr1ec?autoplay=1;rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <iframe width="200" height="100" src="https://www.youtube.com/embed/6au-_QeL-WA?start=4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
   </iframe>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/G1xiFRccd88?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <iframe width="200" height="100" src="https://www.youtube.com/embed/G1xiFRccd88?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
   <!img src="https://cdn.pixabay.com/blog/post/2015/05/15/14-37-19-172_640.png" widht="210" height="150"/>
  
