--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
 	<a href="https://www.youtube.com/watch?v=RaOrMcgCCP0"  target="_blank">玉珠鉉 瑜珈</a>
 	&nbsp | &nbsp
 	<a href="https://www.youtube.com/watch?v=yL_NODpWv5s" target="_blank">醫生與你：膝痛</a>
-	<br>音樂:
-	<a href="https://www.youtube.com/watch?v=6au-_QeL-WA" target="_blank">米高</a>
-	<br>口福: <a href="https://www.allrecipes.com/recipe/6865/to-die-for-blueberry-muffins/" target="_blank">如何製作藍莓鬆餅視頻</a>
+	<br>知信:
+	<a href="https://www.youtube.com/channel/UCaym5qyBvJtENEaQGayoXpA" target="_blank">香港新聞</a>
+	<br>烹飪: <a href="https://www.allrecipes.com/recipe/6865/to-die-for-blueberry-muffins/" target="_blank">如何製作藍莓鬆餅視頻</a>
 	<p>
 	<br>
 	<br><a href="https://www.tulalipresortcasino.com/Resort/LeisureTravelAndToursLuxeline" targer="_blank">賭場巴士預訂</a>
