--- a/index.html
+++ b/index.html
@@ -125,10 +125,9 @@
   <!img src="https://cdn.pixabay.com/blog/post/2015/05/15/14-37-19-172_640.png" widht="210" height="150"/>
  
   
-<h1>西雅圖戶外 會員:
-<br>你們好!
+<h1>西雅圖戶外 會員: 你們好!
 <p>
-<br>我正在學習如何自己構建一個網頁。 這是一份草案。
+<!我正在學習如何自己構建一個網頁。 這是一份草案。>
 </h2>
 </center>
 <p>
