--- a/index.html
+++ b/index.html
@@ -1,113 +1,9 @@
 <!DOCTYPE html>
 <html class='v2' dir='ltr' lang='zh-TW'>
-<meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
-<style>
-		body { background-color: #ccffff;}
-		h1 {color: darkblue; font-size:25px;}
-		h2 {color: black; text-align: left;font-size:15px;}
-		p {font-family: DIN Offc; font-size:15px; color:red;}
-		td { text-align: center; font-size:20px;}	
-		
-.navbar {
-    overflow: hidden;
-    background-color: #333;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-.dropdown {
-    float: left;
-    overflow: hidden;
-}
-
-.dropdown .dropbtn {
-    font-size: 16px;    
-    border: none;
-    outline: none;
-    color: PINK;
-    padding: 14px 16px;
-    background-color: PURPLE;
-    font-family: inherit;
-    margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: YELLOW;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Style the tab */
-.tab {
-    overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
-}
-
-/* Style the buttons that are used to open the tab content */
-.tab button {
-    background-color: inherit;
-	font-size: 30px;   
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    transition: 0.3s;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: #ddd;
-}
-
-/* Create an active/current tablink class */
-.tab button.active {
-    background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-    display: none;
-    padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
-} 
-</style>		
-		
-</style>
+     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+       <link rel="shortcut icon" href="favico.ico" type="image/x-icon">
+        <link rel="icon" href="favico.ico" type="image/x-icon">
+       <link rel="stylesheet" href="css/main.css">
 
 <head><title>快樂人生</title>
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
