--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html class='v2' dir='ltr' lang='zh-TW'>
-     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
-       <link rel="shortcut icon" href="favico.ico" type="image/x-icon">
-        <link rel="icon" href="favico.ico" type="image/x-icon">
-       <link rel="stylesheet" href="css/main.css">
+<html>
 
-<head><title>快樂人生</title>
-	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-</head>
+    <head>
+       <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'/>
+        <meta name="description" content="my testing page">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">  
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>快樂人生</title>
+
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+        <link rel="stylesheet" href="css/main.css">
+         
+   </head>
 
 <body bgcolor="lightyellow">
 <center>
