--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
    </head>
 
 <body bgcolor="lightyellow">
+<header>
+
+<aside id="index_a">
+<ul class="other">
+<li><a href="https://ilvhk2.github.io/AboutMe">About me</a></li>
+<li><a href="https://ilvhk2.github.io/JC-InfoPage">Learning Resource</a></li>
+<li><a href="https://ilvhk2.github.io/R">My R Project</a></li>
+</ul>
+</aside>
+
 <center>
 <iframe width="200" height="100" src="https://www.youtube.com/embed/QRpqVRlutkw?autoplay=1;rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <iframe width="200" height="100" src="https://www.youtube.com/embed/9a9l6gLwLfU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -25,10 +35,11 @@
   <iframe width="200" height="100" src="https://www.youtube.com/embed/G1xiFRccd88?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
   <!img src="https://cdn.pixabay.com/blog/post/2015/05/15/14-37-19-172_640.png" widht="210" height="150"/>
- 
-  
-<h1>西雅圖戶外 會員: 你們好!
-<p>
+
+</header> 
+ <center> 
+<h1>西雅圖戶外 會員: 你們好!</h1>
+<h2>
 <!我正在學習如何自己構建一個網頁。 這是一份草案。>
 </h2>
 </center>
