--- a/index.html
+++ b/index.html
@@ -27,14 +27,18 @@
 </aside>
 
 <center>
-<iframe width="200" height="100" src="https://www.youtube.com/embed/QRpqVRlutkw?autoplay=1;rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="200" height="100" src="https://www.youtube.com/embed/d9SpulbEJmU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="200" height="100" src="https://www.youtube.com/embed/jNn_JbcVdXw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vPdTvfG8oNk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>   
+
+<iframe width="200" height="100" src="https://www.youtube.com/embed/QRpqVRlutkw?autoplay=1;rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen </iframe>
 <iframe width="200" height="100" src="https://www.youtube.com/embed/9a9l6gLwLfU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   <iframe width="200" height="100" src="https://www.youtube.com/embed/_gaJxJCr1ec?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   <iframe width="200" height="100" src="https://www.youtube.com/embed/6au-_QeL-WA?start=4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
   </iframe>
   <iframe width="200" height="100" src="https://www.youtube.com/embed/G1xiFRccd88?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-  <!img src="https://cdn.pixabay.com/blog/post/2015/05/15/14-37-19-172_640.png" widht="210" height="150"/>
+  <!--img src="https://cdn.pixabay.com/blog/post/2015/05/15/14-37-19-172_640.png" widht="210" height="150"/  -->
 
 </header> 
  <center> 
@@ -63,14 +67,14 @@
 	<br>
 	<a href="https://waparks.org/" targer="_blank"> 華盛頓國家公園</a>
 	<br>
-	<br>旅遊: <a href="https://www.e-japannavi.com/">日本</a>&nbsp | &nbsp
+	<nav>旅遊: <a href="https://www.e-japannavi.com/">日本</a>&nbsp | &nbsp
 	<a href="http://www.tokyo-guesthouse.com/index.html" target="_blank">民宿</a>
 	<br>健康: 
-	<a href="https://www.youtube.com/watch?v=iET9uY2luDQ" target="_blank">林芊妤 瑜珈</a>
-	&nbsp | &nbsp
-	<a href="https://www.youtube.com/watch?v=RaOrMcgCCP0"  target="_blank">玉珠鉉 瑜珈</a>
-	&nbsp | &nbsp
+	<nav>
+	<a href="https://www.youtube.com/watch?v=iET9uY2luDQ" target="_blank">林芊妤 瑜珈</a>|
+	<a href="https://www.youtube.com/watch?v=RaOrMcgCCP0"  target="_blank">玉珠鉉 瑜珈</a>|
 	<a href="https://www.youtube.com/watch?v=yL_NODpWv5s" target="_blank">醫生與你：膝痛</a>
+	</nav>
 	<br>知信:
 	<a href="https://www.youtube.com/channel/UCaym5qyBvJtENEaQGayoXpA" target="_blank">香港新聞</a>
 	<br>烹飪: <a href="https://www.allrecipes.com/recipe/6865/to-die-for-blueberry-muffins/" target="_blank">如何製作藍莓鬆餅視頻</a>
@@ -142,11 +146,21 @@
 	<br>
 	<br>
 	<a href="https://waparks.org/" targer="_blank"> Washington State Park</a>
-	<br>
-	<br><a href="https://www.youtube.com/watch?v=x_WJ5cotyfE" target="_blank">yoga </a> &nbsp | &nbsp
+	<br> <nav>
+	Yoga:
+	<a href=https://www.youtube.com/watch?v=WmSIMpIDa_Atarget="_blank">yoga </a> |
+	<a href="https://www.youtube.com/watch?v=x_WJ5cotyfE" target="_blank">yoga </a> |
+	<a href="https://www.youtube.com/watch?v=IYaVfIP40lM"target="_blank">yoga 20 Minute Beginners to Intermediate Workout</a> |
+	<a href="https://www.youtube.com/watch?v=utbtcwPKaC0" target="_blank">5 "Hard" Yoga Poses Made Easy | Health</a>
+	</nav>
+	<nav>
+	Dance:	
+	<a href="https://www.youtube.com/watch?v=6ur6ge5fvk0" target="_blank">belly dance</a>|
 	<a href="https://www.youtube.com/watch?v=ci32v-YsUgA" target="_blank">dance</a>
-	<br><a href="https://www.allrecipes.com/recipe/6865/to-die-for-blueberry-muffins/" target="_blank">How to make blueberry muffins</a>
-	<p>
+	</nav>
+	<nav> Cooking:
+	<a href="https://www.allrecipes.com/recipe/6865/to-die-for-blueberry-muffins/" target="_blank">How to make blueberry muffins</a>
+	</nav>
 	<br>
 	<br><a href="https://www.tulalipresortcasino.com/Resort/LeisureTravelAndToursLuxeline" targer="_blank">Tulalip Bus Reservation</a>
 	<br>
