added a beginner yoga

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </aside>
 
 <center>
+<iframe width="200" height="100" src="https://www.youtube.com/embed/1Krp4W0TlAU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <iframe width="200" height="100" src="https://www.youtube.com/embed/d9SpulbEJmU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <iframe width="200" height="100" src="https://www.youtube.com/embed/jNn_JbcVdXw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <iframe width="200" height="100" src="https://www.youtube.com/embed/vPdTvfG8oNk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>   
