add a html file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <aside id="index_a">
 <ul class="other">
+<li><a href="https://ilvhk2.github.io/HappyBowl/">Home</a></li>
 <li><a href="https://ilvhk2.github.io/AboutMe">About me</a></li>
 <li><a href="https://ilvhk2.github.io/JC-InfoPage">Learning Resource</a></li>
 <li><a href="https://ilvhk2.github.io/R">My R Project</a></li>
