add more html files

--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
 
 <aside id="index_a">
 <ul class="other">
-<li><a href="https://ilvhk2.github.io/HappyBowl/">Home</a></li>
-<li><a href="https://ilvhk2.github.io/AboutMe">About me</a></li>
-<li><a href="https://ilvhk2.github.io/JC-InfoPage">Learning Resource</a></li>
+<li><a href="index.html">Home</a></li>
+<li><a href="Resume.html">About me</a></li>
+<li><a href="Resource.html">Learning Resource</a></li>
 <li><a href="https://ilvhk2.github.io/R">My R Project</a></li>
 </ul>
 </aside>
+</header> 
+
+<p>&nbsp
+<p>&nbsp
 
 <center>
 <iframe width="200" height="100" src="https://www.youtube.com/embed/1Krp4W0TlAU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -39,8 +43,6 @@
   <iframe width="200" height="100" src="https://www.youtube.com/embed/G1xiFRccd88?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
   <!--img src="https://cdn.pixabay.com/blog/post/2015/05/15/14-37-19-172_640.png" widht="210" height="150"/  -->
-
-</header> 
  <center> 
 <h1>西雅圖戶外 會員: 你們好!</h1>
 <h2>
