--- a/Resume.html
+++ b/Resume.html
@@ -1,29 +1,172 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-    
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-   <link rel="icon" href="favicon.ico" type="image/x-icon">
-    
- <link rel="stylesheet" href="css/main.css"> 
-
 <head>
-       <title>JC InfoPage</title>
+	<title>Resume</title>
+	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+   <link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
 <header>
+
 <aside id="index_a">
 <ul class="other">
-<li><a href="https://ilvhk2.github.io/HappyBowl/">Home</a></li>
-<li><a href="https://ilvhk2.github.io/AboutMe">About me</a></li>
-<li><a href="https://ilvhk2.github.io/JC-InfoPage">Learning Resource</a></li>
+<li><a href="index.html">Home</a></li>
+<li><a href="Resume.html">About me</a></li>
+<li><a href="Resource.html">Learning Resource</a></li>
 <li><a href="https://ilvhk2.github.io/R">My R Project</a></li>
 </ul>
 </aside>
 
+
+<center><h1>Jessica Chan </h1></center>
+
+<div class="navbar">
+
+	<div class="dropdown">
+	<button class="dropbtn"></i>Technical Skill</button>
+    <div class="dropdown-content">	
+		<p>SAS: Macro, Graph, Tabulate, STAT, IML, Regression Analysis
+		<br>Oracle E-Business Suite Module: Work in Process, Bill of Material, Purchase Order, Inventory
+		<br>Web: HTML5, CSS
+		<br>Programming Lanuage: PL/SQL, Fortran, Java
+		<br>Other: Ansible, Puppet, Docket
+
+  	  </div>
+	</div> 
+
+
+    <div class="dropdown">
+    <button class="dropbtn"></i>Education</button>
+    <div class="dropdown-content">		
+<p>B.S. in Mathematics, University of Washington, WA. (June 1988)
+<br>B.S. in Statistics, University of Washington, WA. (June 1988)
+<br>UNIX & Linux Administration Certificate (completed 6/2017)
+<br>Java Programming Certificate(completed 6/2015)
+<br>Oracle Applications Development Certificate (completed 8/2002)
+	  </div>
+    </div>
+
+	<div class="dropdown">
+	<button class="dropbtn">Publication</button>
+	<div class="dropdown-content">			
+		<p>Methods to Display a "Y*X=Z/Overlay" Picture, Jessica Y. Chan and Julie Smith, presented at 1992 Northeast SAS Users Group and published in the NESUG proceedings.
+<br>Evaluation of Alternative Models for Surveillance of Monthly Mortality Data, Myron Katzoff, Jessica Chan, and Randy Curtin, published in the journal of Statistics in Medicine.
+<br>Analytic Limitations to Current National Health Surveys, Van Parsons, Jessica Chan, and Randy Curtin, presented at 1990 American Statistical Association Poster Session and published in the ASA proceedings.
+	  </div>
+    </div>    
+   
+	<div class="dropdown">
+	  <button class="dropbtn">Award</button>
+	  <div class="dropdown-content">		
+		<p>Boeing Outstanding Performance Award, 2016 and 2004
+		<br>Boeing Pride Excellent Award, 2015, 2014, 2013, 2010, and 2009
+		<br>Boeing E-card Recognition, 2018
+		<br>National Center for Health Statistics On-the-Spot Award, Sept. 1996	
+	  </div>
+	  </div>
+	
+</div>	
+
 </header>
 
+<center><h2>Employment</h2></center>
+    <!-- Tab links -->
+<div class="tab"><h3>
+  <button class="tablinks" onclick="openInfo(event, 'job2')"><b>National Center for Health Statistics</b><br>Biomedical Mathematical Statistician<br>1989-1996</br></button>
+  <button class="tablinks" onclick="openInfo(event, 'job3')"><b>Group Health Cooperative Healthcare company</b><br>SAS Programmer Analyst<br>1996-1997</br></button>
+  <button class="tablinks" onclick="openInfo(event, 'job4')"><b>Fred Hutchinson Cancer Research Center</b><br>SAS Programmer Analyst<br>1997-1998</br></button>
+  <button class="tablinks" onclick="openInfo(event, 'job5')"><b>The Boeing</b><br>SAS Programmer Analyst<br>1998-2004</br></button>
+  <button class="tablinks" onclick="openInfo(event, 'job6')"><b>The Boeing</b><br>Oracle EBS Programmer<br>2004-2018</br></button>  
+</div>
+
+<div id="job1" class="tabcontent">
+<h4>Nov. 1988 - Feb. 1990<br> Mathematical Statistician
+<br>Economic Survey Division
+<br>Census Bureau, Suitland, Maryland
+</h4>
+   <ul>
+	<li>Maintained and modified quality control of survey methodology.
+   <li>Provided general statistical and methodological support for ongoing Economic Surveys Division
+    <li>projects, including the Survey of Minority-Owned Business Enterprises.
+    <li>Wrote computer specifications for programmers.
+    <li>Wrote FORTRAN and SAS programs for non-response adjustment.
+    <li>Monitored and managed the Quality Control program and wrote procedures.
+   </ul>
+</div>
+<div id="job2" class="tabcontent">
+<h4>Feb. 1990 - Sept. 1996 <br>Mathematical Statistician (Biomedical)
+<br>Office of Research and Methodology
+<br>National Center for Health Statistics, Hyattsville, MD.
+</h4>
+<ul>
+<li>Participated in research activities related with the Mortality Surveillance System (MSS) including the evaluation of final national mortality data.
+<li>Compared results from fitted MSS model to final and to provisional data. 
+<li>Applied time series regression models to selected cause of death data sets. Displayed results in graphs and tabulate format.
+<li>Generalized variance curves for National Health Interview Surveys (NHIS) data using SUDAAN software.
+<li>Wrote and present papers at professional meetings such as ASA and regional SAS Users Group.
+</ul>
+</div>
+<div id="job3" class="tabcontent">
+<h4>Oct. 1996 - Sept. 1997<br> Group Health Cooperative of Puget Sound
+<br>Business Analyst - Rating and Analysis
+</h4>
+<ul>
+<li>Programmed Health Plan Employer Data & Information Set (HEDIS) 3.0 Quality Care measures using standard guidelines written by National Committee for Quality Assurance (NCQA).
+<li>Assisted co-workers debug their SAS programs.
+</ul>
+</div>
+<div id="job4" class="tabcontent">
+<h4>Oct. 1997- April 1998
+<br> Fred Hutchinson Cancer Research Center
+<br>Business Analyst/Programmer - CARET/NSNH Coordinating Center
+</h4>
+<ul>
+<li>Provided programming and support for the Statistical Unit.
+<li>Created, updated and modified several tables for the 1998 CARET Progress Report.
+<li>Investigated and solved data discrepancies with CARET Serum Bank database and analysis result data updates.
+<li>Created the automated NSNH Lab system, included pull list logic, analysis updates and quality control.
+</ul>
+</div>
+<div id="job5" class="tabcontent">
+<h4>May 1998- Sept 2004 
+<br>The Boeing Company
+<br>Material Management Information Technology (Forecast)
+<br>Business Systems Programmer- Analyst
+</h4>
+<ul>
+<li>Developed SAS programs summarizing monthly statistics and min/max plan.
+<li>Pulled transaction data from Oracle views, calculated moving average and inserted calculated data into Oracle views.
+<li>Designed and developed a macro inside a macro SAS program generating and displaying graphs on the Web.
+<li>Modified the existing sales and inventory programs to incorporate McDonnell Aircraft Corporation data. 
+<li>Wrote ad-hoc programs to support Logistic Specialists.
+<li>Provided Statisticians with SAS support.
+</ul>
+</div>
+<div id="job6" class="tabcontent">
+<h4>Sept 2004 - Jan 2018
+<br>The Boeing Company
+<br>Material Management Information Technology (Kitting)
+<br>Business Systems Programmer- Analyst
+</h4>
+<ul>
+<li>Gathered and evaluated user requirements, mockup scenario and reviewed it with users.
+<li>Created and modify existing custom report using Oracle Report Tool 6i.
+<li>Created and modify existing PL/SQL Packages.
+<li>Created test data with Oracle EBS Modules (Bills of Material, Inventory, Work in Process, Order Management, Shipping, and Purchasing) for testing.
+<li>Troubleshoot on reported problems with warehouse focal and Logistic Specialists.
+<li>Supported server migration, coordinated and performed interfaces connectivity testing, modified request-set parameters and code. 
+<li>Assisted application migration.
+Gathered and evaluated user requirements, mockup scenario and reviewed it with users.
+<li>Created and modify existing custom report using Oracle Report Tool 6i.
+<li>Created and modify existing PL/SQL Packages.
+<li>Created test data with Oracle EBS Modules (Bills of Material, Inventory, Work in Process, Order Management, Shipping, and Purchasing) for testing.
+<li>Troubleshoot on reported problems with warehouse focal and Logistic Specialists.
+<li>Supported server migration, coordinated and performed interfaces connectivity testing, modified request-set parameters and code. 
+<li>Assisted application migration.
+</ul>
+</div>
 
 <script>
 function openInfo(evt, tabName) {
@@ -48,91 +191,5 @@ function openInfo(evt, tabName) {
     evt.currentTarget.className += " active";
 } 
 </script>
-
-    <!-- Tab links -->
-<div class="tab">
-  <button class="tablinks" onclick="openInfo(event, 'Tool_C')"><h3>Tool</button>
-  <button class="tablinks" onclick="openInfo(event, 'GitHub_C')"><h3>GigHub Info</button>  
-  <button class="tablinks" onclick="openInfo(event, 'Wordpress_C')"><h3>Wordpress</button>  
-  <button class="tablinks" onclick="openInfo(event, 'Lynda_C')"><h3>Lynda</button>
-  <button class="tablinks" onclick="openInfo(event, 'Learning_C')"><h3>Learning</button>
-    <button class="tablinks" onclick="openInfo(event, 'Resource_C')"><h3>Resource</button>
-</div>
-
-<div id="Tool_C" class="tabcontent">
-<dl>
-  <dt>Visual Studio  </dt>
-   <dd><a href="https://rebeccapeltz.gitbooks.io/wats-lab-faq/content/use-the-visual-studio-code-terminal.html" target="_blank">Info.</a></dd>
-   <dd>Video<a href="https://www.youtube.com/watch?v=eLbTrH1BzA0" target="_blank">Download And Install Visual Studio 2017 FREE</a></dd>
- <p><dt>Google Analytics </dt>
-   <dd><a href="https://www.youtube.com/watch?v=EBvJaUSbAUA" target="_blank">google analytics setup</a></dd>
-   <dd><a href="https://www.youtube.com/watch?v=mXcQ7rVn3ro" target="_blank">How to Setup Google Analytics & Install on Website</a></dd>
- </dl>
-</div>
-  
-<div id="GitHub_C" class="tabcontent">
-<h4>GitHub Info.</h4>
-<a href="https://guides.github.com/"  target="_blank"><h4>Guide</a><p>
-<a href="https://www.youtube.com/playlist?list=PL5-da3qGB5IBLMp7LtN8Nc3Efd4hJq0kD" target="_blank"><h4>videos</a>
-<a href="https://www.git-tower.com/learn/git/commands" target="_blank"><h4>commands</a>
-<a href="https://stackoverflow.com/questions/8775850/how-do-i-add-files-and-folders-into-github-repos" target="_blank"><h4>beg</a>
-<p>&nbsp
-<a href="https://github.com/login" target="_blank"><h3>GitHub Login</a> 
-<a href="https://codenvy.io/site/login" target="_blank"><h3>Codenvy Login</a> better to login with FireFox
-</div>
-
-<div id="Wordpress_C" class="tabcontent">
-<dl>
-  <dt>Tutorial </dt>
-   <dd><a href="https://www.lynda.com/portal/sip?org=kcls.org" target="_blank"><h4>KCLS Lynda</h4></a></dd>
-    <dd><a href="https://kcls.org/students/" target="_blank"><h4> Students Info.</h4></a></dd>
-<dt>Video </dt>
-   <dd><a href="https://www.youtube.com/watch?v=2cbvZf1jIJM" target="_blank">Youtube</a></dd>
- </dl>
-</div>
-
-<div id="Lynda_C" class="tabcontent">
-    <a href="https://www.lynda.com/portal/sip?org=kcls.org" target="_blank"><h4> Lynda</h4></a>
-    <p><a href="https://kcls.org/students/" target="_blank"><h4> Students Info.</h4></a>
-</div>  
-
-<div id="Resource_C" class="tabcontent">
-	  <a href="https://validator.w3.org/target="_blank">validator</a>
-    <a href="http://www.tyler.com/templates/" target="_blank"><h4> Templates</h4></a>
-    <p><a href="https://fonts.google.com/" target="_blank"><h4> Google Fonts</h4></a>
-    <p><a href="https://pixabay.com/" target="_blank"><h4>Pixabay</a> Free images
-    <p><a href="https://logomakr.com/" target="_blank"><h4>Logo Maker</a>
-</div> 
-<div id="Learning_C" class="tabcontent">
-  <dl>
-    <p><dt>School</dt>
-      <dd><a href="https://weblogin.washington.edu/" target="_blank">UW</a></dd>
-  	  <dd> youtube: &nbsp<a href="https://www.youtube.com/channel/UCll_nlSRML4SRkKeUW50imA" target="_blank">Seattle University Web Development Certificate</a></dd>
-	  <dd><a href="https://webadvisor.seattleu.edu/WAPROD/WebAdvisor?TOKENIDX=3304288053&type=M&constituency=WBST&pid=CORE-WBST">SU</a></dd>
-	  <dd><a href="https://www.seattleu.edu/mysu/" target="_blank">mySU</a></dd>
-	  <dd><a href="https://outlook.office365.com/owa/?realm=seattleu.edu" target="_blank">SU Email</a></dd>
-	  <dd><a href="https://seattleu.instructure.com/" target="_blank">SU Canvas</a></dd>
-	  <dd><a href="https://suwebdev.slack.com/" target="_blank">SU Slack</a></dd>
-	<P><dt>Resource</dt>
-	   <dd> <a href="https://dtanslate.google.com/#auto/zh-TW/" target="_blank">translate</a></dd>
-	   <dd> <a href="https://www.w3schools.com/tags/tag_form.asp" target="_blank">W3schools</a></dd>
-	   <dd> <a href="https://www.safaribooksonline.com/accounts/login/?next=/register-topics/" target="_blank">Safari</a></dd>	   
-	<P><dt>GitHub	</dt>
-	  <dd><a href="https://www.atlassian.com/git/tutorials/syncing/git-push" target="_blank"><h4>Atlassian github tutorials</a></dd>
-	  <dd> <a href="hhttps://stackoverflow.com/questions/8775850/how-do-i-add-files-and-folders-into-github-repos" target="_blank">stackoverflow: add folder into github</a></dd>
-	<P><dt>HTML5</dt>	
-	  <dd> <a href="https://degreed.com/learning#/search?term=HTML5" target="_blank">Degreed</a></Dd>
-	<P><dt>CSS</dt>
-	  <dd> <a href="https://css-dticks.com/bem-101/" target="_blank">css 101</a></dd>	
-	  <dd><a href="https://degreed.com/learning#/search?term=css" target="_blank">Degreed</a><dd>
-	<P><dt>JavaScript</dt>
-	  <dd> <a href="https://degreed.com/learning#/search?term=JavaScript&type=video" target="_blank">Degreed</a></dd>
-	  <dd> <a href="https://www.washington.edu/accesscomputing/webd2/student/unit5/module2/index.html" target="_blank">javaScript</a></dd>
-    <P><dt>Java</dt> 
-    <P><dt>Unix</dt>
- </dl> 
-</div>
-
-
 </body>
 </html>
