remove auto play music "autoplay=1;"

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 <iframe width="200" height="100" src="https://www.youtube.com/embed/jNn_JbcVdXw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 <iframe width="200" height="100" src="https://www.youtube.com/embed/vPdTvfG8oNk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>   
 
-<iframe width="200" height="100" src="https://www.youtube.com/embed/QRpqVRlutkw?autoplay=1;rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen </iframe>
+<iframe width="200" height="100" src="https://www.youtube.com/embed/QRpqVRlutkw?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
 <iframe width="200" height="100" src="https://www.youtube.com/embed/9a9l6gLwLfU?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   <iframe width="200" height="100" src="https://www.youtube.com/embed/_gaJxJCr1ec?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   <iframe width="200" height="100" src="https://www.youtube.com/embed/6au-_QeL-WA?start=4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
