--- a/Resource.html
+++ b/Resource.html
@@ -222,11 +222,11 @@ function openInfo(evt, tabName) {
 </div> 
 <div id="Learning_C" class="tabcontent">
   <dl>
-    <p><dt>School</dt>
-      <dd><a href="https://weblogin.washington.edu/" target="_blank">UW</a></dd>
-  	  <dd> youtube: &nbsp<a href="https://www.youtube.com/channel/UCll_nlSRML4SRkKeUW50imA" target="_blank">Seattle University Web Development Certificate</a></dd>
+    <p><dt>School Login</dt>
+      <dd><a href="https://weblogin.washington.edu/" target="_blank">UW Login</a></dd>  	
+      <dd><a href="https://floridatech.instructure.com/login" target="_blank">Florida Tech Login</a></dd>
 	  <dd><a href="https://webadvisor.seattleu.edu/WAPROD/WebAdvisor?TOKENIDX=3304288053&type=M&constituency=WBST&pid=CORE-WBST">SU</a></dd>
-	  <dd><a href="https://www.seattleu.edu/mysu/" target="_blank">mySU</a></dd>
+	  <dd><a href="https://www.seattleu.edu/mysu/" target="_blank">SU Login</a></dd>
 	  <dd><a href="https://outlook.office365.com/owa/?realm=seattleu.edu" target="_blank">SU Email</a></dd>
 	  <dd><a href="https://seattleu.instructure.com/" target="_blank">SU Canvas</a></dd>
 	  <dd><a href="https://suwebdev.slack.com/" target="_blank">SU Slack</a></dd>
@@ -243,10 +243,14 @@ function openInfo(evt, tabName) {
 	  <dd> <a href="https://css-dticks.com/bem-101/" target="_blank">css 101</a></dd>	
 	  <dd><a href="https://degreed.com/learning#/search?term=css" target="_blank">Degreed</a><dd>
 	<P><dt>JavaScript</dt>
+	  <dd><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">Mozilla Web technology for developers</a>
 	  <dd> <a href="https://degreed.com/learning#/search?term=JavaScript&type=video" target="_blank">Degreed</a></dd>
 	  <dd> <a href="https://www.washington.edu/accesscomputing/webd2/student/unit5/module2/index.html" target="_blank">javaScript</a></dd>
     <P><dt>Java</dt> 
     <P><dt>Unix</dt>
+    <p><dt>Security</dt>
+    <dd><a href="http://scholarbank.nus.edu.sg/handle/10635/99370" target="_blank">Organizational Transformation using Electronic Data Interchangee</a></dd>
+    <dd><a href="http://www.informit.com/articles/article.aspx?p=363728&amp;seqNum=2" target="_blank"> An Overview of Computer Security</a></dd>
  </dl> 
 </div>
 
