rename resource tab to Free Tool

--- a/Resource.html
+++ b/Resource.html
@@ -173,7 +173,7 @@ function openInfo(evt, tabName) {
   <button class="tablinks" onclick="openInfo(event, 'Wordpress_C')"><h3>Wordpress</button>  
   <button class="tablinks" onclick="openInfo(event, 'Lynda_C')"><h3>Lynda</button>
   <button class="tablinks" onclick="openInfo(event, 'Learning_C')"><h3>Learning</button>
-    <button class="tablinks" onclick="openInfo(event, 'Resource_C')"><h3>Resource</button>
+    <button class="tablinks" onclick="openInfo(event, 'Resource_C')"><h3>Free Tool</button>
 </div>
 
 <div id="Tool_C" class="tabcontent">
